--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                  I am eager to apply my skills to build functional and visually appealing web applications.
              </p>
              <div class="buttons">
-                 <button class="btn bhov animate-button"><a href="C:\Users\durga\Desktop\new_portfolio\About.html">ABOUT</a></button>
-                 <button class="btn bhov animate-button"><a href="C:\Users\durga\Desktop\new_portfolio\skills.html">SKILLS</a></button>
-                 <button class="btn bhov animate-button"><a href="C:\Users\durga\Desktop\new_portfolio\projects.html">PROJECTS</a></button>
-                 <button class="btn bhov animate-button"><a href="C:\Users\durga\Desktop\new_portfolio\contact.html">CONTACT</a></button>
+                 <button class="btn bhov animate-button"><a href="About.html">ABOUT</a></button>
+                 <button class="btn bhov animate-button"><a href="skills.html">SKILLS</a></button>
+                 <button class="btn bhov animate-button"><a href="projects.html">PROJECTS</a></button>
+                 <button class="btn bhov animate-button"><a href="contact.html">CONTACT</a></button>
              </div>
               </div>
          </section>
