--- a/About.html
+++ b/About.html
@@ -280,7 +280,7 @@
         <!-- Profile Section -->
         <div class="profile bhov">
             <div class="profile_box">
-                <img src="images/portfolio_image2.jpg" alt="Profile Image">
+                <img src="portfolio_image2.jpg" alt="Profile Image">
             </div>
         </div>
     </section>
