--- a/skills.html
+++ b/skills.html
@@ -284,7 +284,7 @@
         <div class="skills-group">
             <h2>Frontend</h2>
             <div class="skill-item">
-                <img src="images/HTML.png" alt="HTML Logo" class="skill-logo">
+                <img src="HTML.png" alt="HTML Logo" class="skill-logo">
                 HTML
                 <div class="circle">
                     <div class="circle-text">90%</div>
@@ -292,7 +292,7 @@
                 </div>
             </div>
             <div class="skill-item">
-                <img src="images/CSS.png" alt="CSS Logo" class="skill-logo">
+                <img src="CSS.png" alt="CSS Logo" class="skill-logo">
                 CSS
                 <div class="circle">
                     <div class="circle-text">85%</div>
@@ -300,7 +300,7 @@
                 </div>
             </div>
             <div class="skill-item">
-                <img src="images/JavaScript.png" alt="JavaScript Logo" class="skill-logo">
+                <img src="JavaScript.png" alt="JavaScript Logo" class="skill-logo">
                 JavaScript
                 <div class="circle">
                     <div class="circle-text">80%</div>
@@ -308,7 +308,7 @@
                 </div>
             </div>
             <div class="skill-item">
-                <img src="images/React.jpg" alt="React Logo" class="skill-logo">
+                <img src="React.jpg" alt="React Logo" class="skill-logo">
                 React JS
                 <div class="circle">
                     <div class="circle-text">75%</div>
@@ -320,7 +320,7 @@
         <div class="skills-group">
             <h2>Backend</h2>
             <div class="skill-item">
-                <img src="images/Java.png" alt="Java Logo" class="skill-logo">
+                <img src="Java.png" alt="Java Logo" class="skill-logo">
                 Java
                 <div class="circle">
                     <div class="circle-text">95%</div>
@@ -328,7 +328,7 @@
                 </div>
             </div>
             <div class="skill-item">
-                <img src="images/JDBC.png" alt="JDBC Logo" class="skill-logo">
+                <img src="JDBC.png" alt="JDBC Logo" class="skill-logo">
                 JDBC
                 <div class="circle">
                     <div class="circle-text">80%</div>
@@ -336,7 +336,7 @@
                 </div>
             </div>
             <div class="skill-item">
-                <img src="images/Java_JEE.png" alt="JEE Logo" class="skill-logo">
+                <img src="Java_JEE.png" alt="JEE Logo" class="skill-logo">
                 JEE
                 <div class="circle">
                     <div class="circle-text">75%</div>
@@ -348,7 +348,7 @@
         <div class="skills-group">
             <h2>Database</h2>
             <div class="skill-item">
-                <img src="images/MySQL.png" alt="MySQL Logo" class="skill-logo">
+                <img src="MySQL.png" alt="MySQL Logo" class="skill-logo">
                 MySQL
                 <div class="circle">
                     <div class="circle-text">90%</div>
