--- a/project1.html
+++ b/project1.html
@@ -29,7 +29,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url("images/3d_image.jpg") no-repeat center center;
+    background: url("3d_image.jpg") no-repeat center center;
     background-size: contain;
     opacity: 0.2; /* Adjust the opacity for less visibility */
     z-index: -1; /* Keeps the image behind the content */
