--- a/project3.html
+++ b/project3.html
@@ -29,7 +29,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url("images/flexcard_image.png") no-repeat center center;
+    background: url("flexcard_image.png") no-repeat center center;
     background-size: contain;
     opacity: 0.2; /* Adjust the opacity for less visibility */
     z-index: -1; /* Keeps the image behind the content */
