--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
          <section class="intro">
              <div class="intro__image bhov animate-image">
                  <div class="intro_box">
-                    <img src="images/profile_img.jpg" alt="">
+                    <img src="profile_img.jpg" alt="">
                  </div>
              </div>
              <!-- description section -->
