--- a/project2.html
+++ b/project2.html
@@ -227,7 +227,7 @@ body::before {
     <section class="project1">
         <div class="pro">
             <h2 class="project1_heading">Key Flexbox Features for a Responsive Web Design</h2>
-            <button class="flexcard-button bhov"><a href="C:\Users\durga\Desktop\flexBoxProject\flex_index.html">Learn More</a></button>
+            <button class="flexcard-button bhov"><a href="flex_index.html">Learn More</a></button>
         </div>
             <p class="project1_description">This project is a responsive, front-end web application for Tap Accounting, designed for small businesses to manage their accounting needs in a user-friendly and intuitive manner. Built with HTML and CSS, the layout is flexible, mobile-friendly, and easy to navigate.</p>
 
