--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- heading section -->
         <nav class="header">
             <h1 class="thov animate-header">Portfolio</h1>
-            <h1 class="thov animate-header"><a href="C:\Users\durga\Desktop\new_portfolio\index.html">Home</a></h1>
+            <h1 class="thov animate-header"><a href="index.html">Home</a></h1>
         </nav>
         <!-- image section -->
          <section class="intro">
